Robotics/log/build_2023-06-01_10-31-14/robot_manipulator/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/tatianam/ProyectoFinal/Robotics/install/robot_manipulator/lib/python3.10/site-packages/robot_manipulator/manipulator.py", line 171
    ef unclose_grip(self):
       ^^^^^^^^^^^^
SyntaxError: invalid syntax

